--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="css/index.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Shopp</title>
 </head>
 <body>
    <menu> <h1>Cardápio de Páscoa</h1>
@@ -15,8 +15,8 @@
     </ul>
 </menu>
 <div id="cart">
-    <span><h1>Detalhes do pedido</h1>
-    <p id="value"></p><p id="del">X</p></span>
+    <span><h1>Detalhes do pedido</h1><p id="del">X</p>
+    <p id="value"></p><p id="Total"></p></span>
     
     <form>
         <label for="nome">Nome<input id="nome" type="text"></label>
