--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,13 +11,13 @@
    <menu> <h1>Cardápio de Páscoa</h1>
     <ul>
         <li><img src="icons/shopping-cart.png" ></li>
-        <li><img src="icons/menu.png" ></li>
+        <li><a href="cad.html"><img src="icons/menu.png" ></a></li>
     </ul>
 </menu>
 <div id="cart">
-    <span><h1>Detalhes do pedido</h1><p id="del">X</p>
-    <p id="value"></p><p id="Total"></p></span>
-    
+    <h1>Detalhes do pedido</h1><p id="del">X</p>
+      <span>  <p id="value"></p><p id="Total"></p></span>
+
     <form>
         <label for="nome">Nome<input id="nome" type="text"></label>
         <label for="endereco">Endereço<input id="endereco" type="text"></label>
